added rows, columns, and jumbotron using bootstrap

--- a/vacation-site.html
+++ b/vacation-site.html
@@ -11,13 +11,24 @@
 
       <p>This is my top 5 list of places I want to visit!</p>
     </div>
-    <ol>
-      <li>New Zealand</li>
-      <li>Iceland</li>
-      <li>France</li>
-      <li>Tasmania</li>
-      <li>Italy</li>
-    </ol>
+    <div class="row">
+      <div class="col-6">
+        <h1>New Zealand</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+      <div class="col-6">
+        <h1>Iceland</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem in saepe voluptatibus quibusdam accusantium hic unde consectetur dolore repudiandae consequuntur blanditiis deleniti vitae omnis nesciunt dolor natus facere, quae facilis?</p>
+      </div>
+      <div class="col-6">
+        <h1>France</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla itaque magni odio iste inventore sapiente saepe molestiae illum facilis architecto. Eos neque accusamus hic aliquam omnis beatae. Soluta, ex ullam?</p>
+      </div>
+      <div class="col-6">
+        <h1>Italy</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facere reprehenderit nihil. Temporibus, quia autem! Eius ex doloribus nihil sunt harum nobis? Expedita, adipisci ex! Fugiat debitis error non mollitia.</p>
+      </div>
+    </div>
     <h2>Feedback from travelers to these areas:</h2>
     <blockquote class="blockquote">
       <p>Everyone must visit Paris at least once!</p>
